# internal/services/notes/notes_handler.go
@@ -18,6 +18,17 @@ func NewNoteHandler(uc NoteUsecase, log *zap.Logger) *NoteHandler {
 }
 var _ = domain.GenericResponse{}
 
+// GetNotes godoc
+// @Security BearerAuth
+//	@Summary		Get a Notes
+//	@Description	Retrieve a Notes
+//	@Tags			Notes
+// @Param id path string true "ID catatan yang ingin dicari"
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object} utils.SuccessResponse
+//	@Failure		500	{object} utils.BaseResponse
+//	@Router			/notes/{id} [get]
 func (h *NoteHandler) GetNote(c *gin.Context) {
 	id := c.Param("id")
 	note, err := h.uc.GetByID(c, id)
@@ -29,14 +40,14 @@ func (h *NoteHandler) GetNote(c *gin.Context) {
 }
 
 // GetNotes godoc
-//
+// @Security BearerAuth
 //	@Summary		Get list of Notes
 //	@Description	Retrieve a list of all Notes
 //	@Tags			Notes
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{array}		domain.GenericResponse
-//	@Failure		500	{object}	domain.GenericResponse
+//	@Success		200	{object} utils.SuccessWithPaginationResponse
+//	@Failure		500	{object} utils.BaseResponse
 //	@Router			/notes [get]
 func (h *NoteHandler) GetNotes(c *gin.Context) {
 	filters := utils.GetFilter(c)
@@ -60,16 +71,17 @@ type NoteRequest struct {
 	Content string `json:"content" form:"content" validate:"required"`
 }
 
-// CreateNote godoc
-//
+// 	CreateNote godoc
+// 	@Security BearerAuth
 //	@Summary		Create a new notes
 //	@Description	Add a new notes to the system
-//	@Tags			notes
+//	@Tags			Notes
 //	@Accept			json
 //	@Produce		json
-//	@Param			notes	body		NoteRequest	true	"notes data"
-//	@Success		200		{object}	domain.GenericResponse
-//	@Failure		400		{object}	domain.GenericResponse
+//	@Param			notes	body	NoteRequest	true	"notes data"
+//	@Success		200		{object} utils.SuccessResponse
+//	@Failure		500		{object} utils.BaseResponse
+//	@Failure		400		{object} utils.ValidationErrorResponse
 //	@Router			/notes [post]
 func (h *NoteHandler) CreateNote(c *gin.Context) {
 	var req NoteRequest
@@ -98,12 +110,29 @@ type NoteUpdateRequest struct {
 	Content string    `json:"content" form:"content" validate:"required"`
 }
 
+// 	UpdateNote godoc
+// 	@Security BearerAuth
+//	@Summary		update a new notes
+//	@Description	Add a new notes to the system
+//	@Tags			Notes
+//	@Accept			json
+//	@Produce		json
+//	@Param			notes	body	NoteUpdateRequest	true	"notes data"
+//	@Success		200		{object} utils.SuccessResponse
+//	@Failure		500		{object} utils.BaseResponse
+//	@Failure		400		{object} utils.ValidationErrorResponse
+//	@Router			/notes [put]
 func (h *NoteHandler) UpdateNote(c *gin.Context) {
 	var req NoteUpdateRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		utils.ErrorResp(c, http.StatusBadRequest, err.Error())
 		return
 	}
+	// Panggil helper untuk validasi
+	if !utils.ValidateRequest(&req, c, h.log) {
+		return
+	}
+
 	note, err := h.uc.Update(c, &req)
 	if err != nil {
 		utils.ErrorResp(c, http.StatusInternalServerError, err.Error())
@@ -114,6 +143,17 @@ func (h *NoteHandler) UpdateNote(c *gin.Context) {
 	})
 }
 
+// 	DeleteNote godoc
+// 	@Security BearerAuth
+//	@Summary		delete a new notes
+//	@Description	delete a new notes to the system
+//	@Tags			Notes
+// @Param id path string true "ID catatan yang akan dihapus"
+//	@Accept			json
+//	@Produce		json
+//	@Success		200		{object} utils.SuccessResponse
+//	@Failure		500		{object} utils.BaseResponse
+//	@Router			/notes/{id} [delete]
 func (h *NoteHandler) DeleteNote(c *gin.Context) {
 	id := c.Param("id")
 	if err := h.uc.Delete(c, id); err != nil {
