# internal/utils/response.go
@@ -17,32 +17,54 @@ type PaginationMeta struct {
 	TotalPages int64 `json:"total_pages"`
 }
 
-func SuccessResp(c *gin.Context, message string, data interface{}) {
-	c.JSON(http.StatusOK, gin.H{
-		"success": true,
-		"message": message,
-		"data":    data,
-	})
+type BaseResponse struct {
+	Success bool   `json:"success"`
+	Message string `json:"message"`
 }
 
+// SuccessResponse adalah response dengan data
+type SuccessResponse struct {
+	Success bool        `json:"success"`
+	Message string      `json:"message"`
+	Data    interface{} `json:"data"`
+}
+
+// SuccessWithPaginationResponse adalah response dengan data + pagination
+type SuccessWithPaginationResponse struct {
+	Success    bool           `json:"success"`
+	Message    string         `json:"message"`
+	Data       interface{}    `json:"data"`
+	Pagination PaginationMeta `json:"pagination"`
+}
+
+func SuccessResp(c *gin.Context, message string, data interface{}) {
+	resp := SuccessResponse{
+		Success: true,
+		Message: message,
+		Data:    data,
+	}
+	c.JSON(http.StatusOK, resp)
+}
 func SuccessWithPaginationResp(c *gin.Context, message string, data interface{}, page, pageSize, total int64) {
-	totalPages := int(math.Ceil(float64(total) / float64(pageSize)))
-	c.JSON(http.StatusOK, gin.H{
-		"success": true,
-		"message": message,
-		"data":    data,
-		"pagination": PaginationMeta{
+	totalPages := int64(math.Ceil(float64(total) / float64(pageSize)))
+	resp := SuccessWithPaginationResponse{
+		Success: true,
+		Message: message,
+		Data:    data,
+		Pagination: PaginationMeta{
 			Page:       page,
 			PageSize:   pageSize,
 			Total:      total,
-			TotalPages: int64(totalPages),
+			TotalPages: totalPages,
 		},
-	})
+	}
+	c.JSON(http.StatusOK, resp)
 }
 
 func ErrorResp(c *gin.Context, status int, message string) {
-	c.JSON(status, gin.H{
-		"success": false,
-		"message": message,
-	})
+	resp := BaseResponse{
+		Success: false,
+		Message: message,
+	}
+	c.JSON(status, resp)
 }
